# ollama_gateway

./: Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: docker.yml
assets/: admin.html
docs/: requirements.md
src/: admin.rs  auth.rs  config.rs  connection_id.rs  error.rs  main.rs  metrics.rs  ollama.rs  proxy.rs  registry.rs  state.rs
src/langfuse/: collector.rs  mod.rs  models.rs
src/processors/: gemma4.rs  mod.rs
