[package]
name = "ollama_gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ollama_gateway"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tokio-stream = "0.1"
anyhow = "1"
langfuse-ergonomic = "0.6"
langfuse-client-base = "0.7"

[dev-dependencies]
tempfile = "3"
